@@ -1009,14 +1009,13 @@ Replace the value of the CAR or CDR slot of a cons cell.
 ### (append lists\*) -> list
 
 `append` nondestructively append it's arguments. All arguments except the last
-are shallow copied, all arguments except the last must be lists.
+are shallow copied, all arguments except the last must be proper lists.
 
     (append)                    ; ==> nil
     (append 'a)                 ; ==> a
     (append '(a b) 'c)          ; ==> (a b . c)
     (append '(a b) '(c d))      ; ==> (a b c d)
-    (append '(a . b) '(c d))    ; ==> (a b c d)
-    (append '(a . b) '(c . d))  ; ==> (a b c . d)
+    (append '(a b) '(c . d))    ; ==> (a b c . d)
 
 ### (assq key alist) -> cons or nil
 
