@@ -4,6 +4,7 @@ Changes in JMurmel-1.4.7 relative to JMurmel-1.4.6
  * changed defun/ define: are now allowed inside labels forms
  * changed car/ cdr: no longer accept strings
  * changed vector-add: add an optional argument "pos"
+ * changed append to no longer accept dotted lists (except as the last argument)
 
  * added macrolet
  * added vector-remove
